<resources>
    <string name="app_name">Gestión Cerdos</string>
    <string name="action_settings">Settings</string>
    <string name="no_88888">NO: 88888</string>
    <string name="id_88888">ID: 88888</string>
    <string name="pancho">Pancho</string>
    <string name="_2018_05_23">2018-05-23</string>
    <string name="semental">SEMENTAL</string>
    <string name="peso_76_kg">Peso: 76 kg</string>
    <string name="agregaCerdo">Agrega un nuevo cerdo a la base de datos</string>
    <string name="numero">Número</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="agregar">Agregar</string>
    <string name="peso">Peso del cerdo</string>

    <string-array name="tipo_cerdo">
        <item>Semental</item>
        <item>Vientre</item>
        <item>Macho Engorda</item>
        <item>Hembra Remplazo</item>
    </string-array>

    <string-array name="sexo">
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>

    <string name="title_activity_detalle_cerdo">Información del cerdo</string>
    <string name="informaci_n_detallada_de_cada_cerdo">Información detallada de cada cerdo</string>
    <string name="agregar_nuevo_cerdo">Agregar cerdo</string>
    <string name="total_cerdos">Total de cerdos:</string>
    <string name="action_add_peso">Agregar peso</string>
    <string name="agregar_peso">Agregar Peso</string>
    <string name="peso_historico_del_cerdo">Peso historico del cerdo</string>
    <string name="ulimas_vacunas">Úlimas vacunas</string>
    <string name="pesos_cerdo">Pesos del cerdo</string>
    <string name="ver_pesos">Ver pesos...</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_pesaje">Fecha de pesaje</string>
    <string name="nombre_enfermedad">Nombre/Enfermedad</string>
    <string name="observaciones">Observaciones</string>

    <string name="agregar_vacuna">Agregar Vacuna</string>
    <string name="ver_vacunas">Ver vacunas ...</string>
    <string name="lista_todas_las_vacunas_del_cerdo">Lista todas las vacunas del cerdo</string>
    <string name="eliminar_cerdo">Eliminar cerdo</string>
    <string name="agrega_nuevo_celo">Agrega un nuevo registro de celo</string>
    <string name="fecha_monta">Fecha de monta</string>
    <string name="fecha_celo">Fecha de celo</string>
    <string name="fecha_destete">Fecha de destete</string>
    <string name="agrega_peso_cerdo">Agrega un nuevo peso del cerdo</string>
    <string name="numero_semental">No del semental</string>
    <string name="agregar_reproduccion">Agregar reproducción</string>
    <string name="agregar_parto">Parto</string>
    <string name="agregar_salida">Salida</string>
    <string name="describe_salida_cerdos">Describe la salida de la granja de los cerdos</string>
    <string name="motivo">Motivo</string>
    <string name="aceptar">Aceptar</string>
    <string name="reproduccion">Reproducción</string>
    <string name="partos">Partos</string>
    <string name="informaciol_parto">Información del parto</string>
    <string name="numero_crias">Número de crías</string>
    <string name="fecha_parto">Fecha de parto</string>
    <string name="peso_crias">Peso de crías (separadas por coma (,) )</string>
    <string name="crias_vivas">Crías vivas</string>
</resources>
