<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AgregaCerdoActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:text="@string/agregaCerdo"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtNumero" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/numero"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNumero" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/nombre"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/spTipoCerdo" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtFecha"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/spSexo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/spTipoCerdo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAgregarCerdo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Colored" android:onClick="agregar_onClick"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtPeso"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:ems="10"
            android:id="@+id/txtPeso" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spSexo" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/peso"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:id="@+id/txtFecha" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre" android:textSize="24sp"
            android:text="@string/fecha_nacimiento" android:onClick="txtFecha_onClick"/>
</android.support.constraint.ConstraintLayout>