<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0dp">


    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="135dp"

            app:cardCornerRadius="2dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:layout_editor_absoluteY="4dp"
                tools:layout_editor_absoluteX="3dp">

            <TextView
                    android:id="@+id/lblNumero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/no_88888"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline5"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/lblID"/>
            <TextView
                    android:id="@+id/lblID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/id_88888"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteY="8dp" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline2"/>

            <TextView
                    android:id="@+id/lblNombre"
                    android:layout_width="0dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/pancho"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/lblTipo"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline5"/>
            <TextView
                    android:text="@string/semental"
                    android:layout_width="0dp"
                    android:layout_height="19dp"
                    android:id="@+id/lblTipo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/_2018_05_23"
                    android:layout_width="0dp"
                    android:layout_height="17dp"
                    android:id="@+id/lblFnac"
                    app:layout_constraintTop_toBottomOf="@+id/lblNombre" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline5"/>
            <TextView
                    android:text="@string/peso_76_kg"
                    android:layout_width="0dp"
                    android:layout_height="17dp"
                    android:id="@+id/lblPeso"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lblNumero"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
            <android.support.constraint.Guideline android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content" android:id="@+id/guideline2"
                                                  android:orientation="vertical"
                                                  app:layout_constraintGuide_percent="0.65"/>
            <android.support.constraint.Guideline android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content" android:id="@+id/guideline4"
                                                  app:layout_constraintGuide_begin="20dp"
                                                  android:orientation="vertical"/>
            <android.support.constraint.Guideline android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content" android:id="@+id/guideline5"
                                                  android:orientation="vertical"
                                                  app:layout_constraintGuide_percent="0.5582011"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>