<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AgregaSalidaActivity">

    <TextView
            android:text="@string/describe_salida_cerdos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView20" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <TextView
            android:text="@string/motivo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView23"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView20" android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/motivo"
            android:ems="10"
            android:id="@+id/txtscmotivo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView23" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:inputType="text"/>
    <TextView
            android:text="@string/fecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView21" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtscmotivo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_fecha"
            android:id="@+id/txtscFecha" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView21" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:onClick="txtscFecha_onClick"/>

    <TextView
            android:text="@string/observaciones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView24"
            app:layout_constraintTop_toBottomOf="@+id/txtscFecha" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_observa"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtscobservaciones" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView24" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtscobservaciones" android:onClick="btnAgregarSalida_onClick"/>
</android.support.constraint.ConstraintLayout>