<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AgregaPesoActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtapPeso"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/peso"
            app:layout_constraintTop_toBottomOf="@+id/textView17"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:id="@+id/txtapFecha" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            android:onClick="txtapFecha_onClick" android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"/>
    <Button
            android:text="@string/agregar_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAgregarPeso" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtapFecha" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Colored" android:onClick="btnAgregarPeso_onClick"/>
    <TextView
            android:text="@string/agrega_peso_cerdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/peso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView17" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <TextView
            android:text="@string/fecha_pesaje"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtapPeso" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
</android.support.constraint.ConstraintLayout>