<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AgregaVacunaActivity">

    <TextView
            android:text="@string/nombre_enfermedad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/txtavNombre" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/nombre_enfermedad"/>
    <TextView
            android:text="@string/fecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtavNombre" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/observaciones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtavFecha"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="139dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtavObservaciones" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/observaciones" android:singleLine="false"/>
    <Button
            android:text="@string/agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtavObservaciones"
            android:onClick="btnAgregarVacuna_onClick" style="@style/Widget.AppCompat.Button.Colored"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:id="@+id/txtavFecha"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="18sp"
            android:onClick="txtavFecha_onClick" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
</android.support.constraint.ConstraintLayout>