<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AgregaReproduccionActivity">

    <TextView
            android:text="@string/agrega_nuevo_celo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <TextView
            android:text="@string/fecha_monta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_fecha"
            android:focusable="false"
            android:id="@+id/txtarepfmonta" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <TextView
            android:text="@string/fecha_celo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtarepfmonta" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_fecha"
            android:focusable="false"
            android:id="@+id/txtdrepfcelo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <TextView
            android:text="@string/fecha_destete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtdrepfcelo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/alto_fecha"
            android:id="@+id/txtdrepfdestete" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <TextView
            android:text="@string/numero_semental"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtdrepfdestete" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:hint="@string/numero_semental"/>
    <Button
            android:text="@string/agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btndrepAgregar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" style="@style/Widget.AppCompat.Button.Colored"/>
</android.support.constraint.ConstraintLayout>